whline_set - save/restore the y coordinate too. Reaching the right side of the screen can cause a line wrap. PR lib/55434